# contextor

./: .gitignore  README.md  layout.yml  pyproject.toml
contextor/: __init__.py  binds.py  config.py  layout.py  logging.py  processing.py  structures.py  tools.py
tasks/: gen_layout.py
