[tool.poetry]
name = "contextor"
version = "0.0.1"
description = "context menu app for everything"
authors = ["lightmanLP <liteman1000@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["context", "menu", "desktop"]

[tool.poetry.urls]
"Github" = "https://github.com/lightmanLP/contextor"

[tool.poetry.dependencies]
python = "^3.10"
pyglet = "~2.0.8"
yamt = "~0.1.3.1"
pydantic = "^2.0.2"
loguru = "^0.7.0"
oyaml = "^1.0"
typing-extensions = "^4.7.1"
numpy = "^1.25.1"
pynput = "^1.7.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
poethepoet = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
